--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -16,6 +16,7 @@ button,
 select {
   border: none;
   outline: none;
+  padding: 0;
   background: transparent;
   font-family: inherit;
   -webkit-tap-highlight-color: transparent;
