--- a/scss/theme/_light.scss
+++ b/scss/theme/_light.scss
@@ -22,5 +22,9 @@ html {
   // menu-column
   --menu-column-border: #D2D1D6;
   --menu-column-heading: #1A162E;
+// Sidebar
   --mobile-menu-bg-color: #fff;
+    --side-bar-text-color: #1A162E;
+    --side-bar-shadow : rgba(200, 200, 200, 0.40);
+    // Slideshow
 }
