--- a/scss/theme/_dark.scss
+++ b/scss/theme/_dark.scss
@@ -25,4 +25,8 @@ html.dark {
   --menu-column-link: #B9BABE;
   --menu-column-border: #171C28;
 
+    // Sidebar
+  --mobile-menu-bg-color:#292E39;
+  --side-bar-text-color: #B9BABE;
+  --side-bar-shadow : rgba(23, 28, 40, 0.40);
 }
