--- a/scss/components/_logo.scss
+++ b/scss/components/_logo.scss
@@ -8,7 +8,7 @@
         line-height: 1.45; /* 145.455% */
         color: var(--text-color);
     }
-        // @include abstracts.breakpoint(md) {
+                // @include abstracts.screen(md) {
         //     margin: 0 auto;
         // }
 }
