--- a/templates/header.html
+++ b/templates/header.html
@@ -12,12 +12,12 @@
             <button class="js-toggle d-none d-lg-block" toggle-target="#navbar">
                 <img src="../assets/icons/navbar-close.svg" alt="" class="navbar-inner-close-btn d-lg-block icon">
             </button>
-            <a href="#!" class="nav-btn d-none d-lg-flex">
+            <a href="#!" class="nav-btn d-none d-md-flex">
                 <img src="../assets/icons/cart.svg" alt="" class="icon">
                 <span class="nav-btn__card">Card</span>
                 <span class="nav-btn__stats">3</span>
             </a>
-            <a href="#!" class="nav-btn d-none d-lg-flex">
+            <a href="#!" class="nav-btn d-none d-md-flex">
                 <img src="../assets/icons/heart.svg" alt="" class="icon">
                 <span class="nav-btn__card">Favorite</span>
                 <span class="nav-btn__stats">3</span>
