--- a/scss/base/_grid.scss
+++ b/scss/base/_grid.scss
@@ -1,20 +1,19 @@
 @use "sass:math";
 @use "sass:list";
 $grid-breakpoints: (
-    xs: 0,
-    sm: 576px,
-    md: 768px,
-    lg: 992px,
-    xl: 1200px,
     xxl: 1400px,
+    xl: 1200px,
+    lg: 992px,
+    md: 768px,
+    sm: 576px,
 );
 
 $container-max-widths: (
-    sm: 540px,
-    md: 720px,
-    lg: 960px,
-    xl: 1140px,
-    xxl: 1320px,
+    sm: 100%,
+    md: 540px,
+    lg: 720px,
+    xl: 960px,
+    xxl: 1140px,
 );
 $grid-column: 12;
 $grid-gutter-width: 30px;
@@ -35,7 +34,7 @@ $gutters: (
 .container-fluid {
     --grid-gutter-x: #{$grid-gutter-width};
     --grid-gutter-y: 0;
-    width: 100%;
+    width: 1320px;
     margin-left: auto;
     margin-right: auto;
     @extend %gutter-padding;
@@ -53,7 +52,8 @@ $gutters: (
     margin-left: calc(var(--grid-gutter-x) * 0.5 * -1);
     margin-right: calc(var(--grid-gutter-x) * 0.5 * -1);
     > * {
-        @extend %gutter-padding;
+        // @extend %gutter-padding;
+        gap: var(--grid-gutter-x);
         margin-top: var(--grid-gutter-y);
     }
 }
@@ -63,17 +63,17 @@ $gutters: (
     @extend %gutter-padding;
 }
 @mixin make-media-querry($breakpoint) {
-    @media (min-width: $breakpoint) {
+    @media (max-width: $breakpoint) {
         @content;
     }
 }
 
 @mixin media-breakpint-only($infix) {
-    @media (min-width: map-get($grid-breakpoints, #{infix})) {
+    @media (max-width: map-get($grid-breakpoints, #{infix})) {
     }
 }
 
-@mixin make-row-cols($infix) {
+@mixin make-row-cols($infix : null) {
     @for $i from 1 through $grid-column * 0.5 {
         .row-cols#{$infix}-#{$i} > * { 
             flex: 0 0 auto;
@@ -82,7 +82,7 @@ $gutters: (
     }
 }
 
-@mixin make-col($infix) {
+@mixin make-col($infix: null) {
     @for $i from 1 through $grid-column {
         .col#{$infix}-#{$i} { 
             flex: 0 0 auto;
@@ -91,7 +91,7 @@ $gutters: (
     }
 }
 
-@mixin make-offsets($infix) {
+@mixin make-offsets($infix: null) {
     @for $i from 1 through $grid-column {
         .offset#{$infix}-#{$i} {
             margin-left: if($i >0, math.div(100%, $grid-column) * $i, 0);
@@ -99,7 +99,7 @@ $gutters: (
     }
 }
 
-@mixin make-gutters($infix) {
+@mixin make-gutters($infix: null) {
     @each $i, $ratio in $gutters {
         .g#{$infix}-#{$i} {
             --grid-gutter-x: #{$grid-gutter-width * $ratio };
@@ -107,10 +107,15 @@ $gutters: (
         }
     }
 }
+
+@include make-row-cols();
+@include make-col();
+@include make-offsets();
+@include make-gutters();
+
 @each $infix, $breakpoint in $grid-breakpoints {
     $max-width: map-get($container-max-widths, $infix);
-    $is-xs: $infix == "xs";
-    $validInfix: if($is-xs, "", "-#{$infix}");
+    $validInfix:  "-#{$infix}";
     @include make-media-querry($breakpoint) {
         .container {
             max-width: $max-width;
