--- a/scss/components/_slideshow.scss
+++ b/scss/components/_slideshow.scss
@@ -2,11 +2,6 @@
 
 .slideshow {
     position: relative;
-    margin: 40px 0;
-
-    @include abstracts.breakpoint(md) {
-        margin: 30px 0;
-    }
 
     &__inner {
         display: flex;
@@ -19,7 +14,7 @@
         width: 100%;
         padding-top: 34%;
 
-        @include abstracts.breakpoint(md) {
+        @include abstracts.screen(md) {
             padding-top: 50%;
         }
     }
@@ -33,7 +28,7 @@
         object-fit: cover;
         border-radius: 20px;
 
-        @include abstracts.breakpoint(md) {
+        @include abstracts.screen(md) {
             border-radius: 10px;
         }
     }
@@ -66,7 +61,7 @@
             border: 4px solid #fff;
             border-radius: 50%;
 
-            @include abstracts.breakpoint(md) {
+            @include abstracts.screen(md) {
                 border-width: 3px;
             }
         }
@@ -90,7 +85,7 @@
         font-weight: 500;
         line-height: 1.44;
 
-        @include abstracts.breakpoint(md) {
+        @include abstracts.screen(md) {
             font-size: 1.4rem;
             line-height: 1.42;
         }
